iFinally got around some of my sub grid layout issues, just still need refining

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,10 +17,11 @@ body {
 } 
 
 header {
-  grid-column: 1/3;
+  grid-column: 1/3; /* Setting header element (child of body grid) to span column lines 1 to 3 */
   display: flex; /* use flex to position logo and links correctly */ 
   align-items: center; /* center logo and nav elements in y plane */
   justify-content: space-between; /*space logo and nav links either side of screen */
+  padding: 10px;
 }
 
 nav a {
@@ -32,30 +33,38 @@ nav a {
   grid-column: 1/3;
   background-image: url(../../images/02-hero-bg.jpg);
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row-reverse;
+ 
 }
 
-.hero-banner h2 {
-  display:flex;
-  align-items: flex-end;
+.hero-banner div {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.hero-banner div h2 {
   color: white;
-
+  padding: 5px;
 }
 
-main{
+main {
+  grid-column: 1/3; /* Setting main element (child of body grid) to span column lines 1 to 3 */
+  display: grid;
+}
+
+#about {
   grid-column: 1/3;
   display: grid;
   grid-template-areas: 
-  'sec-about sec-about'
-  'sec-work sec-work'
-  'sec-cont sec-cont';
-}
-main > section {
-  grid-column: 1/3;
-  display:grid;
+  'about-head about-cont';
+  grid-template-rows: 100%;
+  grid-template-columns: 1fr 2fr;
 }
 
-section #about {
-  grid-area: sec-about;
+
+#about div {
+  grid-area: about-head;
   background-color: aqua;
   padding: 100px 50px;
   text-align: center;
@@ -63,39 +72,87 @@ section #about {
   border: 5px;
 }
 
-#about h2 {
-  grid-area: about-t;
-}
-
 #about article {
-  grid-area: article;
-  background-color: white;
- }
+  grid-area: about-cont;
 
-section #work {
-  grid-area: sec-work;
 }
 
-#work h2 {
-  grid-area: work-title;
-  background-color:blue;
- }
- 
- #work article #proj-1 {
+#work {
+  grid-column: 1/3;
+  display:grid;
+  grid-template-areas: 
+  "work-head work-cont";
+  grid-template-rows: 100%;
+  grid-template-columns: 1fr 2fr;
+}
+
+/*
+#work {
+display: grid;
+grid-template-areas:
+'proj-1 proj-1 proj-1'
+'proj-1 proj-1 proj-1'
+'proj-1 proj-1 proj-1'
+'proj-2 proj-2 proj-2'
+'proj-2 proj-2 proj-2'
+'proj-3 proj-3 proj-3';
+}
+*/
+
+#work div {
+  grid-area: work-head;
+  background-color: blueviolet;
+}
+
+#work article {
+
+  grid-area: work-cont;
+
+  display: grid;
+
+  grid-template-areas:
+  "proj-1 proj-1 proj-1"
+  "proj-1 proj-1 proj-1"
+  "proj-1 proj-1 proj-1"
+  "proj-2 proj-2 proj-3"
+  "proj-2 proj-2 proj-3";
+
+  grid-template-rows: 3fr 3fr 3fr 2fr 2fr;
+  grid-template-columns: 3fr 2fr 1fr;
+}
+
+#proj1 {
   grid-area: proj-1;
- }
- #work article #proj-2 {
+}
+
+#proj2 {
   grid-area: proj-2;
+}
 
- } #work article #proj-3 {
+#proj3 {
   grid-area: proj-3;
- }
+}
 
- section #contact {
-  grid-area: sec-cont;
-  background-color:chocolate;
- }
+#contact {
+  grid-column: 1/3;
+  display: grid;
+  grid-template-areas: 
+  "contact-head contact-cont";
+  grid-template-rows: 100%;
+  grid-template-columns: 1fr 2fr;
+  row-gap: 10px;
 
+}
+
+#contact div {
+  grid-area: contact-head;
+  height: 100%;
+}
+
+#contact article {
+  grid-area: contact-cont;
+  height: 100%;
+}
 
 h1,
 h2,
@@ -111,5 +168,17 @@ p {
 }
 
 footer {
-  grid-column: 1/3;
+  grid-column: 1/3; /* Setting main element (child of body grid) to span column lines 1 to 3 */
+}
+
+@media screen {
+  
+}
+
+@media screen {
+  
+}
+
+@media screen {
+  
 }
